--- a/hello-world/pubspec.yaml
+++ b/hello-world/pubspec.yaml
@@ -95,3 +95,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  fonts:
+    - family: TiltWarp
+      fonts:
+        - asset: assets/TiltWarp-Regular.ttf
