--- a/hello-world/pubspec.yaml
+++ b/hello-world/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   audioplayers: ^3.0.1
   video_player: ^2.5.3
+  shared_preferences: ^2.0.0
 
 dev_dependencies:
   flutter_test:
