--- a/mastermind/pubspec.yaml
+++ b/mastermind/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
   assets:
     - assets/img/sky.jpg
     - assets/img/wood.jpg
+    - assets/img/sign.png
+    - assets/img/button.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
