--- a/mastermind/pubspec.yaml
+++ b/mastermind/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  audioplayers: ^3.0.1
+  shared_preferences: ^2.0.18
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +70,27 @@ flutter:
     - assets/img/wood.jpg
     - assets/img/sign.png
     - assets/img/button.png
+    - assets/img/border_wood.png
+    - assets/img/square_button.png
+    - assets/img/checkbox_0.png
+    - assets/img/checkbox_1.png
+
+    - assets/img/shape_0.png
+    - assets/img/shape_1.png
+    - assets/img/shape_2.png
+    - assets/img/shape_3.png
+    - assets/img/shape_4.png
+    - assets/img/shape_5.png
+    - assets/img/shape_6.png
+
+    - assets/sfx/button.wav
+    - assets/sfx/button_pitched.wav
+    - assets/sfx/ambient.mp3
+
+  fonts:
+    - family: Righteous
+      fonts:
+        - asset: assets/font/Righteous-Regular.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
